--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:coverage": "NODE_ENV=test jest --coverage --detectOpenHandles --no-cache",
     "lint": "eslint --fix",
     "prettier": "prettier './src' --write",
+    "run:concat": "nodemon ./src/concat.ts",
     "run:mp3": "nodemon ./src/mp3.ts",
     "run:mp3-opening": "nodemon ./src/mp3-opening.ts"
   },
@@ -55,6 +56,7 @@
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.2",
     "@types/dotenv": "^8.2.0",
+    "@types/ffmpeg-concat": "^1.1.2",
     "@types/jest": "^29.2.5",
     "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.11.18",
@@ -63,6 +65,7 @@
     "eslint": "8.23.1",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "ffmpeg-concat": "^1.3.0",
     "husky": "^8.0.3",
     "jest": "^29.3.1",
     "lint-staged": "^13.1.0",
