--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "lint": "eslint --fix",
     "prettier": "prettier './src' --write",
     "run:concat": "nodemon ./src/concat.ts",
+    "run:download": "nodemon ./src/download.ts",
     "run:mp3": "nodemon ./src/mp3.ts",
-    "run:mp3-opening": "nodemon ./src/mp3-opening.ts"
+    "run:mp3-opening": "nodemon ./src/mp3-opening.ts",
+    "run:split": "nodemon ./src/split.ts"
   },
   "husky": {
     "hooks": {
@@ -46,6 +48,7 @@
     "cross-fetch": "^3.1.5",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
+    "editly": "^0.14.2",
     "ethereum-blockies-base64": "^1.0.2",
     "fluent-ffmpeg": "^2.1.2",
     "gray-matter": "^4.0.3",
